# OpenCVDemo

./: .gitignore  README.md  build.gradle
src/androidTest/java/com/wuzx/downloadtest/: ExampleInstrumentedTest.java
src/main/: AndroidManifest.xml
src/main/java/com/wuzx/atest/: AbstractTestListActivity.java  DetectBaseTracker.java  FdActivity.java  MediaAppControllerActivity.java  MediaAppDetails.java  MediaPlayerActivity.java  RatingUiHelper.java  TestApplication.java  TestListActivity.java  Version.java
src/main/java/com/wuzx/atest/adapters/: BrowseMediaItemsAdapter.java  (+4 more)
src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  DetectionBasedTracker_jni.cpp  ffmpeg_helloword.cpp  ffmpeg_helloword.h
src/main/res/drawable/: btn_bg_normal.xml  btn_bg_press.xml  btn_bg_selector.xml  pwd_divider.xml
src/main/res/layout/: activity_fullscreen.xml  activity_imageitem_detail.xml  activity_imageitem_list.xml  activity_login.xml  activity_main.xml  activity_media_app_controller.xml  face_detect_layout.xml  fragment_item_list.xml  imageitem_detail.xml  imageitem_list.xml  item_layout.xml  item_list.xml  list_content.xml  media_browse_item.xml  media_ffmpeg_layout.xml  media_ratings.xml  media_search_controls.xml  opencv_layout.xml  test_category_row.xml  test_list_footer.xml  tts_layout.xml
src/main/res/layout-w900dp/: imageitem_list.xml  item_list.xml
src/main/res/values/: attrs.xml  colors.xml  dimens.xml  ids.xml  integers.xml  strings.xml  styles.xml  themes.xml
src/main/res/values-night/: themes.xml
src/test/java/com/wuzx/downloadtest/: ExampleUnitTest.java
(+44 files in other folders)
